src/components/Editor.scss
.main-editor-container {
    display: flex;
    flex-direction: column;
    height: 100vh;
.editor-container {
    flex: 1;
    display: flex;
    height: 100%;
    pre {
        border-radius: 1rem;
    }
    .editor {
        display: flex;
        flex-direction: column;
        border: 1px solid #00000033;
        flex: 1;
        padding: 1rem;
        margin: 1rem;
        textarea {
            flex: 1;
            border: none;
            outline: none;
            resize: none;
        }
        .button-container {
            display: flex;
            button {
                background: transparent;
                border: 1px solid transparent;
                margin: 0.25rem;
                padding: 0.25rem;
                border-radius: 0.25rem;
                min-width: 3rem;
                cursor: pointer;
                &:hover {
                    border: 1px solid gray;
                }
            }
        }
    }
    .renderer {
        display: flex;
        flex-direction: column;
        border: 1px solid #00000033;
        flex: 1;
        margin: 1rem;
        padding: 1rem;
        .react-markdown {
            flex: 1;
            overflow-y: auto;
        }
    }
}
}

